--- a/_config.yml
+++ b/_config.yml
@@ -313,8 +313,8 @@ display_categories: ["external-services"] # these categories will be displayed o
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Yiting]
-  first_name: [Chen]
+  last_name: [Chen]
+  first_name: [Yiting]
 
   style: apa
   locale: en
