--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Yiting Chen # the website title (if blank, full name will be used instead)
+title: Yiting Chen 陈奕廷 # the website title (if blank, full name will be used instead)
 first_name: Yiting
 middle_name:
 last_name: Chen
